--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
-title: Shinigami Apples' Portfolio
-description: A showcase of my art and work.
+title: Rhiannon Makinson
+description: I'm Rhiannon Makinson, a self-taught artist and hobbyist modder based in North Yorkshire.
