--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-cayman
 title: Rhiannon Makinson
 description: I'm Rhiannon Makinson, a self-taught artist and hobbyist modder based in North Yorkshire.
